# AMATH797

./: .gitattributes  README.md
PSet1/: AMATH797_PSet1.html  AMATH797_PSet1.ipynb
PSet2/: AMATH797_PSet2.ipynb
PSet3/: AMATH797_PSet3.html  AMATH797_PSet3.ipynb
Project/: .Rhistory  AMATH797_Project.Rmd  CMakeLists.txt  NIPS.sty  Presentation.pptx  earthquakes.csv  find_filament.cpp  find_filament_R.cpp  find_filament_hnsw.cpp  find_filament_kd-tree.cpp  main.tex  references.bib
Project/faults/: faults.dbf  faults.sbn  faults.sbx  faults.shp.xml  faults.shx
